# zephyr-model

./: .dockerignore  .gitignore  CLAUDE.md  HOWTO.md  Makefile  README.md  compile-data.py  dev-requirements.txt  get-data.py  pyproject.toml
.claude/: settings.local.json
data/: data.json
data_preparation/: README.md  compile-data.py  get-data.py  incremental_update.py  main.py  update_db.py
data_preparation/sql/: observations.sql  station_distances.sql  stations.sql
modelling/: modelling.md  train.py  train_basic_model.ipynb  vector_autoregression.ipynb
modelling/sql/: corodata.sql  get_training_data.sql
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
