[project]
name = "zephyr-model"
version = "0.1.0"
description = "Paragliding conditions forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "pandas>=2.0.0",
    "pydantic>=2.12.4",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "tsai>=0.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
